@@ -10,6 +10,7 @@ from prusa.connect.printer import Printer
 
 from ..lib.core import app
 from ..lib.auth import REALM
+from ...const import PRINTER_CONFIG_TYPES
 from ...serial.helpers import enqueue_instruction
 from ...printer_adapter.structures.regular_expressions import VALID_SN_REGEX, \
     VALID_USERNAME_REGEX, VALID_PASSWORD_REGEX, NEW_SN_REGEX
@@ -186,6 +187,9 @@ class Wizard:
         settings.network.hostname = self.net_hostname
 
         # printer
+        printer_type = PRINTER_CONFIG_TYPES.inverse[
+            self.daemon.prusa_link.printer.type]
+        settings.printer.type = f'{printer_type}'
         settings.printer.name = f'"{self.printer_name}"'
         settings.printer.location = f'"{self.printer_location}"'
 
