@@ -15,3 +15,4 @@ sortedcontainers
 unidecode
 pyric
 zeroconf
+bidict
