@@ -106,6 +106,7 @@
      * Return a better reason when print of a non existant file is requested
      * Api-Key form is hidden in wizard by default -> None if not set
      * Fix the LCD printer going through errors in the wrong order
+     * Make printer settings reflect the actual printer type
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
